GNOME Bugzilla – Bug 750692
Touch text selection: magnifier can't be seen, obscures drag handle
Last modified: 2015-06-11 15:58:01 UTC
When dragging a text selection handle, the magnifier can appear over the handle (and under the user's finger). This means that the magnifier isn't visible. It also means that you can't see the handle you're dragging. One possible solution would be to have both drag handles below the text selection, rather than having the first handle above and the second below.
Created attachment 305001 [details] [review] Adwaita: update text selection handles - we'll put both handles to teh bottom - renamed top, bottom to start and end. will be easier for rtl too.
Created attachment 305006 [details] [review] texthandles: Move start handle to bottom The asset is going to change to point upwards, so physically place the handle below the text position.
Something is going wrong with selection updates here - as I drag the handle, the selection is jumping around wildly.
the jumping selection is wayland-only, so not directly related.
Attachment 305001 [details] pushed as c8d70c8 - Adwaita: update text selection handles Attachment 305006 [details] pushed as fc6871b - texthandles: Move start handle to bottom